Bug 460407 - Could not open access token file
Summary: Could not open access token file
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
: 460880 462123 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-14 06:42 UTC by Lukas Kucharczyk
Modified: 2022-11-29 23:51 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lukas Kucharczyk 2022-10-14 06:42:06 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

When I open the app, the window appears with loading indicator that never finishes.
Log:
---
> flatpak run org.kde.neochat 
Reading access token from the keychain for "@lordfrikk:matrix.org"
Could not open access token file "/home/lukas/.var/app/org.kde.neochat/data/KDE/neochat/@lordfrikk_matrix.org"
> ls -ld /home/lukas/.var/app/org.kde.neochat/data/KDE/neochat/@lordfrikk_matrix.org
drwxr-xr-x - lukas  3 Oct 19:41 /home/lukas/.var/app/org.kde.neochat/data/KDE/neochat/@lordfrikk_matrix.org
---


STEPS TO REPRODUCE
1. Open the app.
2. See the error.

OBSERVED RESULT
App doesn't load.

EXPECTED RESULT
App finished loading, ready to use.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Arch Linux
(available in About System)
KDE Plasma Version: N/A
KDE Frameworks Version: N/A
Qt Version: N/A

ADDITIONAL INFORMATION
This is the Flatpak nightly version:
flatpak info org.kde.neochat 

NeoChat - A client for matrix, the decentralized communication protocol

          ID: org.kde.neochat
         Ref: app/org.kde.neochat/x86_64/master
        Arch: x86_64
      Branch: master
     Version: 22.09
     License: GPL-3.0
      Origin: kdeapps
  Collection: 
Installation: system
   Installed: 115.7 MB
     Runtime: org.kde.Platform/x86_64/5.15-21.08
         Sdk: org.kde.Sdk/x86_64/5.15-21.08

      Commit: b369d5087f79c1bdc1081a231f0baa10c37801170131e3b272f964d7d323c887
      Parent: fa23bbeebe42bc9df83ba00a10b0fdf5139f3cb06fc4088bfd593344a9c48722
     Subject: Built on Fri Oct 14 04:41:12 CEST 2022
        Date: 2022-10-14 02:43:44 +0000
Comment 1 Tobias Fella 2022-10-24 14:01:03 UTC
I can confirm this crash, they will go away with some changes that will probably be in the next update
Comment 2 Tobias Fella 2022-11-17 02:39:48 UTC
*** Bug 460880 has been marked as a duplicate of this bug. ***
Comment 3 Tobias Fella 2022-11-22 13:45:29 UTC
*** Bug 462123 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2022-11-27 18:39:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/682
Comment 5 Tobias Fella 2022-11-29 23:51:07 UTC
Git commit 6347c02d8b78f36f7b04f9a6ffe9ba69ad58a9ee by Tobias Fella.
Committed on 29/11/2022 at 23:43.
Pushed by tfella into branch 'master'.

Delete access token file infrastructure

We've never supported it and it's broken, unsecure and leads to crashes-

M  +2    -67   src/controller.cpp
M  +0    -2    src/controller.h

https://invent.kde.org/network/neochat/commit/6347c02d8b78f36f7b04f9a6ffe9ba69ad58a9ee