Delete access token file infrastructure

We've never supported it and it's broken, unsecure and leads to crashes-

BUG: 460407